# smart-code-reviewer

./: README.md  config.yaml  omni_reviewer.db  omni_reviewer.db-shm  omni_reviewer.db-wal  omni_reviewer_backup_1777061200152.db  omni_reviewer_backup_1777061254392.db-shm  omni_reviewer_backup_1777061254392.db-wal  omni_reviewer_backup_1777061271858.db  pyproject.toml  smart_code_reviewer.db
output/: omni_review_20260425_153846.csv  omni_review_20260425_153846.json  omni_review_20260425_153925.csv  omni_review_20260425_153925.json  omni_review_20260425_155019.csv  omni_review_20260425_155019.json  smart_code_review_20260425_160128.csv  smart_code_review_20260425_160128.json  smart_code_review_20260425_160219.csv  smart_code_review_20260425_160219.json
src/smart_code_reviewer/: config.py  main.py
src/smart_code_reviewer/api/: server.py
src/smart_code_reviewer/core/: __init__.py  analyzer.py  auto_fix.py  git_diff.py  validator.py
src/smart_code_reviewer/db/: memory_engine.py
src/smart_code_reviewer/io/: export_engine.py
src/smart_code_reviewer/security/: pattern_matcher.py
src/smart_code_reviewer/ui/: __init__.py  dashboard.py  html_reporter.py
src/smart_reviewer/: main.py
src/smart_reviewer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/smart_reviewer/core/: __init__.py  analyzer.py  validator.py
src/smart_reviewer/db/: memory_engine.py
src/smart_reviewer/ui/: __init__.py  dashboard.py
src/smart_reviewer/utils/: ast_toolkit.py
